[tool.poetry]
name = "pantos-client-library"
version = "1.1.3"
description = "Client library for engaging with the Pantos system"
authors = ["Pantos GmbH <contact@pantos.io>"]
license = "GPL-3.0-only"
readme = "README.md"
packages = [
    { include = "pantos"}
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pantos"]
namespaces = true

[tool.poetry.group.test.dependencies]
pytest = "8.2.2"
pytest-cov = "5.0.0"

[tool.poetry.group.lint.dependencies]
bandit = "1.7.9"
flake8 = "7.1.0"
isort = "5.13.2"
mypy = "1.10.1"
types-pyyaml = "6.0.12.20240311"
types-requests = "2.32.0.20240712"
yapf = "0.40.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "3.7.1"

[tool.poetry.dependencies]
pantos-common = "2.1.2"
python = "^3.10"
Cerberus = "1.3.4"
PyYAML = "6.0.1"
requests = "2.32.3"
web3 = "6.5.0"
pyaml-env = "1.2.1"
python-dotenv = "1.0.1"
hexbytes = "1.2.1"
semantic-version = "2.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
