[tool.poetry]
name = "pantos-client-library"
version = "4.1.0"
description = "Client library for engaging with the Pantos system"
authors = ["Pantos GmbH <contact@pantos.io>"]
license = "GPL-3.0-only"
readme = "README.md"
packages = [
    { include = "pantos"}
]
include = [
    "pantos/client-library.yml",
    "pantos/client-library.env"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pantos"]
namespaces = true

[tool.poetry.group.test.dependencies]
pytest = "8.3.4"
pytest-cov = "6.0.0"

[tool.poetry.group.lint.dependencies]
bandit = "1.8.2"
flake8 = "7.1.1"
isort = "6.0.0"
mypy = "1.0.1"
types-pyyaml = "6.0.12.20241230"
types-requests = "2.32.0.20241016"
yapf = "0.43.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "4.1.0"

[tool.poetry.dependencies]
pantos-common = "6.0.1"
python = "^3.13"
Cerberus = "1.3.4"
PyYAML = "6.0.1"
requests = "2.32.3"
web3 = "6.5.0"
pyaml-env = "1.2.1"
python-dotenv = "1.0.1"
hexbytes = "1.2.1"
semantic-version = "2.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
